--- a/Project10/index.html
+++ b/Project10/index.html
@@ -46,7 +46,7 @@
             <p class="mt-3 fw-bold text-white" id="action-message"></p><br>
         </div>
         
-        <img class="img-fluid w-50 rounded mx-4 align-items-lg-center mt-3 border border-3 border-dark"
+        <img class="img-fluid float-end w-75 rounded align-items-lg-center border border-3 border-dark"
             src="portuguese_coast.jpg" alt="Side-view of a marina on the Portuguese coast.">
     </div>
 </body>
